feat: help text

--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -69,15 +69,21 @@
     <Compile Include="Clothing\MaleOutfitPieces.cs" />
     <Compile Include="JMF.Framework\Database.cs" />
     <Compile Include="JMF.Framework\Config.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\Ped\Ped.cs" />
+    <Compile Include="JMF.UI\TextInput.cs" />
+    <Compile Include="JMF.UI\TextFormat.cs" />
+    <Compile Include="JMF.UI\TextColor.cs" />
+    <Compile Include="JMF.UI\TextComponent.cs" />
+    <Compile Include="JMF.UI\Input.cs" />
+    <Compile Include="JMF.UI\Help.cs" />
+    <Compile Include="JMF\Entities\Entity.cs" />
+    <Compile Include="JMF\Entities\Ped\Ped.cs" />
     <Compile Include="JMF.Game\Game.cs" />
     <Compile Include="JMF.Game\Clock.cs" />
     <Compile Include="JMF.Game\Player.cs" />
     <Compile Include="JMF.Math\Vector3.cs" />
     <Compile Include="Menus\Aliases.cs" />
     <Compile Include="Menus\MenuListItem.cs" />
-    <Compile Include="Entities\Model.cs" />
+    <Compile Include="JMF\Entities\Model.cs" />
     <Compile Include="JMF.Modules\InternalModule.cs" />
     <Compile Include="JMF.Modules\ModuleManager.cs" />
     <Compile Include="JMF.Modules\Module.cs" />
@@ -104,14 +110,14 @@
     <Compile Include="Managers\ScubaManager.cs" />
     <Compile Include="JMF.Modules\SilentSirens.cs" />
     <Compile Include="State.cs" />
-    <Compile Include="Entities\Vehicle\Vehicle.cs" />
+    <Compile Include="JMF\Entities\Vehicle\Vehicle.cs" />
     <Compile Include="Managers\VisorManager.cs" />
     <Compile Include="JMF\Control.cs" />
-    <Compile Include="Entities\Vehicle\VehicleColor.cs" />
-    <Compile Include="Entities\Vehicle\VehicleLandingGearState.cs" />
-    <Compile Include="Entities\Vehicle\VehicleHash.cs" />
-    <Compile Include="Entities\Vehicle\VehicleDoorIndex.cs" />
-    <Compile Include="Entities\Vehicle\VehicleSeat.cs" />
+    <Compile Include="JMF\Entities\Vehicle\VehicleColor.cs" />
+    <Compile Include="JMF\Entities\Vehicle\VehicleLandingGearState.cs" />
+    <Compile Include="JMF\Entities\Vehicle\VehicleHash.cs" />
+    <Compile Include="JMF\Entities\Vehicle\VehicleDoorIndex.cs" />
+    <Compile Include="JMF\Entities\Vehicle\VehicleSeat.cs" />
     <Compile Include="JMF\PedHash.cs" />
     <Compile Include="JMF\Gender.cs" />
   </ItemGroup>
