--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Clothing\MaleOutfitPieces.cs" />
     <Compile Include="JMF.Framework\Database.cs" />
     <Compile Include="JMF.Framework\Config.cs" />
+    <Compile Include="JMF.Interiors\IPL.cs" />
+    <Compile Include="JMF.Modules\IPLLoader.cs" />
     <Compile Include="JMF.Modules\ModuleSettings.cs" />
     <Compile Include="JMF.Modules\Respawner.cs" />
     <Compile Include="JMF.Modules\FreemodePlayer.cs" />
@@ -79,6 +81,9 @@
     <Compile Include="JMF.UI\TextComponent.cs" />
     <Compile Include="JMF.UI\Input.cs" />
     <Compile Include="JMF.UI\Help.cs" />
+    <Compile Include="JMF\Blips\BlipColor.cs" />
+    <Compile Include="JMF\Blips\BlipSprite.cs" />
+    <Compile Include="JMF\Blips\Blip.cs" />
     <Compile Include="JMF\Entities\Entity.cs" />
     <Compile Include="JMF\Entities\Ped\PedHash.cs" />
     <Compile Include="JMF\Entities\Thread.cs" />
