--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -145,6 +145,9 @@
     <Content Include="JMFBin\Data\IPL\CasinoGarage.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="JMFBin\Data\IPL\BunkerInterior.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="JMFBin\Data\IPL\FacilityInterior.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
