--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -72,6 +72,7 @@
     <Compile Include="JMF.Interiors\IPLTheme.cs" />
     <Compile Include="JMF.Interiors\IPLEntitySet.cs" />
     <Compile Include="JMF.Interiors\IPL.cs" />
+    <Compile Include="JMF.Modules\InternalModules\WorldspaceLoader.cs" />
     <Compile Include="JMF.Modules\InternalModules\PortalManager.cs" />
     <Compile Include="JMF.Modules\InternalModules\Yacht.cs" />
     <Compile Include="JMF.Modules\InternalModules\IPLLoader.cs" />
@@ -188,6 +189,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="JMFBin\Data\IPL\ZancudoLab.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JMFBin\Data\Worldspaces\SanAndreas.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="JMFBin\Presets\Clothing\accessory.xml">
